<resources>
    <string name="app_name">TV Series Challenge</string>
    <string name="app_version_name">1.0.0</string>
    <string name="main_menu_shows">Shows</string>
    <string name="main_menu_people">People</string>
    <string name="main_menu_settings">Settings</string>
    <string name="shows_query_hint">Search Shows</string>
    <string name="episode_template">Episode %d</string>
    <string name="season_template">Season %d</string>
    <string name="page_template">Page %d</string>
    <string name="summary_not_available">Summary not available</string>
    <string name="alert_delete_title">Delete Favorite Show</string>
    <string name="alert_delete_message">This item will be deleted. Do you want to delete it?</string>
    <string name="main_menu_favorites">Favorites</string>
    <string name="add_to_favorites_fab_description">Add to Favorites</string>
    <string name="favorite_shows_title">My Favorite Shows</string>
    <string name="people_query_hint">Search People</string>
    <string name="settings_security_title">Protect with Password</string>
    <string name="about_neutral">View on Github</string>
    <string name="about_github_url" translatable="false">https://github.com/fvrodas/android_challenge_tv_series</string>
    <string name="enter_your_code">Enter your 6 digit code</string>
    <string name="incorrect_code">Your password is incorrect.</string>
    <string name="invalid_code"> Your password must have 6 digits.</string>
    <string name="biometric_auth_error"> Authentication error: %s</string>
    <string name="biometric_auth_failed"> Authentication failed.</string>
    <string name="biometric_subtitle">Enter using your biometric credential</string>
    <string name="biometric_needs_enrollment">"You should enroll at least 1 fingerprint or equivalent biometric authenticator."</string>
    <string name="alternative_auth">Use your 6 digit password</string>
    <string name="password_title">App Protection</string>
    <string name="show_details_menu_share">Share</string>
    <string name="share_string">Checkout this show: %s\n%s</string>
    <string name="share_this_show">Share this show</string>
</resources>